change file structure of DE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,22 +7,38 @@ endif()
 message("-- CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
-set(EXE de-solver)
-set(TEST de-test)
-set(DE_LIB de)
 include_directories(inc)
-add_executable(${TEST}
-    test/test.cpp
-    src/DifferentialEvolution.cpp)
-add_executable(${EXE} 
+set(EXE    de-solver)
+set(TEST   de-test)
+set(DE_LIB de)
+
+# source list
+set(DE_INC
+    inc/DE/DERandomF.h
+    inc/DE/DEOrigin.h
+    inc/DE/strategy/DEInterface.h
+    inc/DE/strategy/DEBuiltInStrategy.h)
+set(DE_SRC 
+    src/DE/DERandomF.cpp
+    src/DE/DEOrigin.cpp
+    src/DE/strategy/DEInterface.cpp
+    src/DE/strategy/DEBuiltInStrategy.cpp)
+set(SRC_LIST
     src/Optimizer.cpp 
     src/hspice_util.cpp
     src/Config.cpp
-    src/DifferentialEvolution.cpp
-    src/main.cpp)
-add_library(${DE_LIB} SHARED 
-    src/DifferentialEvolution.cpp
-    inc/DifferentialEvolution.h)
+    src/main.cpp
+    ${DE_SRC})
+add_executable(${TEST}
+               test/test.cpp
+               ${DE_SRC})
+add_executable(${EXE} 
+               ${DE_SRC}
+               src/Optimizer.cpp 
+               src/hspice_util.cpp
+               src/Config.cpp
+               src/main.cpp)
+add_library(${DE_LIB} SHARED ${DE_SRC})
 
 find_package(Boost 1.57 REQUIRED)
 if(Boost_FOUND)
@@ -31,14 +47,16 @@ else(Boost_FOUND)
 endif(Boost_FOUND)
 
 if(CMAKE_INSTALL_PREFIX)
-    message("-- Cmake install prefix: ${CMAKE_INSTALL_PREFIX}")
+    message(STATUS "Cmake install prefix: ${CMAKE_INSTALL_PREFIX}")
     install(TARGETS ${EXE} ${TEST} ${DE_LIB} 
-        RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib)
+            RUNTIME DESTINATION bin
+            LIBRARY DESTINATION lib)
     install(FILES inc/DifferentialEvolution.h
-        DESTINATION inc
-        PERMISSIONS OWNER_READ GROUP_READ)
+            DESTINATION inc
+            PERMISSIONS OWNER_READ GROUP_READ)
+    install(DIRECTORY inc/DE 
+            DESTINATION inc)
     install(FILES README.md
-        DESTINATION doc
-        PERMISSIONS OWNER_READ GROUP_READ)
+            DESTINATION doc
+            PERMISSIONS OWNER_READ GROUP_READ)
 endif()
