build static library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,10 @@ message("-- CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 include_directories(inc)
-set(EXE    de-solver)
-set(TEST   de-test)
-set(DE_LIB de)
+set(EXE       de-solver)
+set(TEST      de-test)
+set(DE_SHARED de)
+set(DE_STATIC de-static)
 
 # source list
 set(DE_INC
@@ -23,22 +24,18 @@ set(DE_SRC
     src/DE/DEOrigin.cpp
     src/DE/strategy/DEInterface.cpp
     src/DE/strategy/DEBuiltInStrategy.cpp)
-set(SRC_LIST
-    src/Optimizer.cpp 
-    src/hspice_util.cpp
-    src/Config.cpp
-    src/main.cpp
-    ${DE_SRC})
+
+add_library(${DE_SHARED} SHARED ${DE_SRC})
+add_library(${DE_STATIC} STATIC ${DE_SRC})
 add_executable(${TEST}
-               test/test.cpp
-               ${DE_SRC})
+               test/test.cpp)
 add_executable(${EXE} 
-               ${DE_SRC}
                src/Optimizer.cpp 
                src/hspice_util.cpp
                src/Config.cpp
                src/main.cpp)
-add_library(${DE_LIB} SHARED ${DE_SRC})
+target_link_libraries(${TEST} ${DE_STATIC})
+target_link_libraries(${EXE} ${DE_STATIC})
 
 find_package(Boost 1.57 REQUIRED)
 if(Boost_FOUND)
@@ -48,8 +45,9 @@ endif(Boost_FOUND)
 
 if(CMAKE_INSTALL_PREFIX)
     message(STATUS "Cmake install prefix: ${CMAKE_INSTALL_PREFIX}")
-    install(TARGETS ${EXE} ${TEST} ${DE_LIB} 
+    install(TARGETS ${DE_SHARED} ${DE_STATIC} ${EXE} ${TEST} 
             RUNTIME DESTINATION bin
+            ARCHIVE DESTINATION lib
             LIBRARY DESTINATION lib)
     install(FILES inc/DifferentialEvolution.h
             DESTINATION inc
