--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(solver)
+project(de)
 cmake_minimum_required(VERSION 3.2.1)
 
 if(NOT CMAKE_BUILD_TYPE)
@@ -7,8 +7,6 @@ endif()
 message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 
 # All targets
-set(EXE       de-solver)  # main program, use DE to optimize analog circuit
-set(TEST      de-test)    # test DE algorithm
 set(DE_SHARED de)         # de shared library
 set(DE_STATIC de-static)  # de static library
 
@@ -27,35 +25,16 @@ set(DE_SRC
     src/DE/DEOrigin.cpp
     src/DE/strategy/DEInterface.cpp
     src/DE/strategy/DEBuiltInStrategy.cpp)
-set(SOLVER_INC
-    inc/Config.h
-    inc/DifferentialEvolution.h
-    inc/hspice_util.h
-    inc/Optimizer.h
-    inc/util.h)
-set(SOLVER_SRC
-    src/Config.cpp
-    src/hspice_util.cpp
-    src/main.cpp
-    src/Optimizer.cpp)
-set(TEST_INC test/testbench.h)
-set(TEST_SRC test/test.cpp)
 if(WIN32) # for visual studio
     set(DE_SRC     ${DE_SRC}     ${DE_INC})
-    set(SOLVER_SRC ${SOLVER_SRC} ${SOLVER_INC})
-    set(TEST_SRC   ${TEST_SRC}   ${TEST_INC})
 endif(WIN32)
 
 # build targets
 include_directories(inc)
 add_library(${DE_SHARED} SHARED ${DE_SRC})
 add_library(${DE_STATIC} STATIC ${DE_SRC})
-add_executable(${TEST} ${TEST_SRC})
-add_executable(${EXE} ${SOLVER_SRC})
-target_link_libraries(${TEST} ${DE_STATIC})
-target_link_libraries(${EXE} ${DE_STATIC})
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set_property(TARGET ${EXE} ${DE_SHARED} ${DE_STATIC} ${TEST} PROPERTY CXX_STANDARD 11)
+set_property(TARGET ${DE_SHARED} ${DE_STATIC} PROPERTY CXX_STANDARD 11)
 
 # find dependencies
 # use can use -DBOOST_ROOT or -DBOOST_INCLUDEDIR and -DBOOST_LIBRARYDIR as hint
@@ -78,7 +57,7 @@ endif(OPENMP_FOUND)
 # install program, libs, headers and docs
 if(CMAKE_INSTALL_PREFIX)
     message(STATUS "Cmake install prefix: ${CMAKE_INSTALL_PREFIX}")
-    install(TARGETS ${DE_SHARED} ${DE_STATIC} ${EXE} ${TEST} 
+    install(TARGETS ${DE_SHARED} ${DE_STATIC}
             RUNTIME DESTINATION bin
             ARCHIVE DESTINATION lib
             LIBRARY DESTINATION lib)
